<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/bgPrimary"
    tools:context=".Profile1">
    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="303dp"
                android:background="@drawable/backshop"
                app:layout_constraintEnd_toEndOf="@id/layout1"
                app:layout_constraintStart_toStartOf="@id/layout1"
                app:layout_constraintTop_toTopOf="@id/layout1"
                app:layout_constraintVertical_bias="0.037" />
            <View
                android:id="@+id/bg1"
                android:layout_width="match_parent"
                android:layout_height="303dp"
                android:background="@drawable/bg_gradient_primary_blue"
                app:layout_constraintEnd_toEndOf="@id/layout1"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@id/layout1"
                app:layout_constraintTop_toTopOf="@id/layout1" />
            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                app:layout_constraintStart_toStartOf="@id/bg1"
                app:layout_constraintTop_toTopOf="@+id/bg1" />

            <com.github.florent37.shapeofview.shapes.CircleView
                android:id="@+id/view3"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="25dp"
                app:layout_constraintEnd_toEndOf="@+id/bg1"
                app:layout_constraintStart_toStartOf="@id/bg1"
                app:layout_constraintTop_toTopOf="@id/back">
                <ImageView
                    android:id="@+id/photo_profile"
                    android:layout_width="90dp"
                    android:layout_height="90dp" />
            </com.github.florent37.shapeofview.shapes.CircleView>

            <TextView
                android:id="@+id/nama_lengkap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="#FFF"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="@+id/bg1"
                app:layout_constraintStart_toStartOf="@id/bg1"
                app:layout_constraintTop_toBottomOf="@+id/view3" />

            <LinearLayout
                android:id="@+id/kolom1"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_layout_white"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@id/layout1"
                app:layout_constraintStart_toStartOf="@id/layout1"
                app:layout_constraintTop_toBottomOf="@+id/nama_lengkap">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="24dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="12dp"
                        android:text="@string/username_label"
                        android:textColor="@color/grayPrimary"
                        android:textSize="20sp" />
                    <TextView
                        android:id="@+id/username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:textColor="@color/blackPrimary"
                        android:textSize="20sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="12dp"
                        android:text="@string/email_label"
                        android:textColor="@color/grayPrimary"
                        android:textSize="20sp" />
                    <TextView
                        android:id="@+id/email_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:textColor="@color/blackPrimary"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="12dp"
                        android:text="@string/phonenumber"
                        android:textColor="@color/grayPrimary"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/phone_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:textColor="@color/blackPrimary"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="12dp"
                        android:text="@string/address_label"
                        android:textColor="@color/grayPrimary"
                        android:textSize="20sp" />
                    <TextView
                        android:id="@+id/address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:textColor="@color/blackPrimary"
                        android:textSize="20sp" />
                    <Button
                        android:id="@+id/btn_location"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:padding="2dp"
                        android:text="Location"
                        android:background="@drawable/bg_btn_blue_primary"/>

                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_editprofile"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_btn_blue_primary"
                android:text="EDIT PROFILE"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@id/layout1"
                app:layout_constraintTop_toBottomOf="@+id/kolom1" />

            <Button
                android:id="@+id/btn_history"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="36dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_btn_blue_primary"
                android:text="HISTORY"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@id/layout1"
                app:layout_constraintHorizontal_bias="0.293"
                app:layout_constraintStart_toEndOf="@+id/btn_editprofile"
                app:layout_constraintTop_toBottomOf="@+id/kolom1" />

            <Button
                android:id="@+id/btn_signout"
                android:layout_width="330dp"
                android:layout_height="40dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:background="@color/white"
                android:text="SIGN OUT"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/brownPrimary"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@id/layout1"
                app:layout_constraintEnd_toEndOf="@id/layout1"
                app:layout_constraintTop_toBottomOf="@id/btn_editprofile"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

